--- a/flask/twiceblog/templates/about.html
+++ b/flask/twiceblog/templates/about.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
     <h1>About Page</h1>
+    <article class="media content-section">
+        <p>alhamdulillah</p>
+    </article>
 {% endblock content %}
